updated pages label and names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Dopefolio</title>
+  <title>Kath-Portfolio</title>
   <meta name="description" content="Portfolio Template for Developer" />
 
   <link rel="stylesheet" href="css/style.css" />
@@ -21,25 +21,23 @@
     <div class="header__content">
       <div class="header__logo-container">
         <div class="header__logo-img-cont">
-          <img src="./assets/png/john-doe.png" alt="Ram Maheshwari Logo Image" class="header__logo-img" />
+          <img src="./assets/png/avatar_female_woman_icon.png" alt="Logo Image" class="header__logo-img" />
         </div>
-        <span class="header__logo-sub">John Doe</span>
+        <span class="header__logo-sub">Full Name</span>
       </div>
       <div class="header__main">
         <ul class="header__links">
           <li class="header__link-wrapper">
-            <a href="./index.html" class="header__link"> Home </a>
+            <a href="./index.html" class="header__link">Home</a>
           </li>
           <li class="header__link-wrapper">
-            <a href="./index.html#about" class="header__link">About </a>
+            <a href="./index.html#about" class="header__link">About</a>
           </li>
           <li class="header__link-wrapper">
-            <a href="./index.html#projects" class="header__link">
-              Projects
-            </a>
+            <a href="./index.html#projects" class="header__link">Sample Works</a>
           </li>
           <li class="header__link-wrapper">
-            <a href="./index.html#contact" class="header__link"> Contact </a>
+            <a href="./index.html#contact" class="header__link">Contact</a>
           </li>
         </ul>
         <div class="header__main-ham-menu-cont">
@@ -53,19 +51,19 @@
       <div class="header__sm-menu-content">
         <ul class="header__sm-menu-links">
           <li class="header__sm-menu-link">
-            <a href="./index.html"> Home </a>
+            <a href="./index.html">Home</a>
           </li>
 
           <li class="header__sm-menu-link">
-            <a href="./index.html#about"> About </a>
+            <a href="./index.html#about">About</a>
           </li>
 
           <li class="header__sm-menu-link">
-            <a href="./index.html#projects"> Projects </a>
+            <a href="./index.html#projects">Sample Works</a>
           </li>
 
           <li class="header__sm-menu-link">
-            <a href="./index.html#contact"> Contact </a>
+            <a href="./index.html#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -73,7 +71,7 @@
   </header>
   <section class="home-hero">
     <div class="home-hero__content">
-      <h1 class="heading-primary">Hey, My name is John Doe</h1>
+      <h1 class="heading-primary">Full Name</h1>
       <div class="home-hero__info">
         <p class="text-primary">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
@@ -82,7 +80,7 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a href="./index.html#projects" class="btn btn--bg">Projects</a>
+        <a href="./index.html#projects" class="btn btn--bg">Sample Works</a>
       </div>
     </div>
   </section>
@@ -101,7 +99,7 @@
           <div class="about__content-details">
             <p class="about__content-details-para">
               Hey! It's
-              <strong>John Doe</strong>
+              <strong>Full Name</strong>
               and I'm a <strong> Frontend Web Developer </strong> located in
               Los Angeles. I've done
               <strong> remote </strong>
@@ -135,7 +133,7 @@
   <section id="projects" class="projects sec-pad">
     <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-bg">
-        <span class="heading-sec__main">Projects</span>
+        <span class="heading-sec__main">Sample Works</span>
         <span class="heading-sec__sub">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
           tempora explicabo quae quod deserunt eius sapiente
@@ -149,13 +147,13 @@
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Project 1</h3>
+            <h3 class="projects__row-content-title">Work 1</h3>
             <p class="projects__row-content-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
               facilis tempora, explicabo quae quod deserunt eius sapiente
               praesentium.
             </p>
-            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+            <a href="./work-1.html" class="btn btn--med btn--theme dynamicBgClr">View</a>
           </div>
         </div>
         <div class="projects__row">
@@ -164,13 +162,13 @@
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Project 2</h3>
+            <h3 class="projects__row-content-title">Work 2</h3>
             <p class="projects__row-content-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
               facilis tempora, explicabo quae quod deserunt eius sapiente
               praesentium.
             </p>
-            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+            <a href="./work-2.html" class="btn btn--med btn--theme dynamicBgClr">View</a>
           </div>
         </div>
       </div>
@@ -193,18 +191,12 @@
     <div class="main-container">
       <div class="main-footer__upper">
         <div class="main-footer__row main-footer__row-2">
-          <h4 class="heading heading-sm text-lt">John Doe</h4>
+          <h4 class="heading heading-sm text-lt">Full Name</h4>
           <p class="main-footer__short-desc">
             Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
             tempora explicabo quae quod deserunt
           </p>
         </div>
-      </div>
-
-      <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
-      <div class="main-footer__lower">
-        &copy; Copyright 2021. Made by
-        <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com">Ram Maheshwari</a>
       </div>
     </div>
   </footer>
