change sample projects pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="./index.html#about" class="header__link">About</a>
           </li>
           <li class="header__link-wrapper">
-            <a href="./index.html#projects" class="header__link">Sample Works</a>
+            <a href="./index.html#projects" class="header__link">Sample Projects</a>
           </li>
           <li class="header__link-wrapper">
             <a href="./index.html#contact" class="header__link">Contact</a>
@@ -59,7 +59,7 @@
           </li>
 
           <li class="header__sm-menu-link">
-            <a href="./index.html#projects">Sample Works</a>
+            <a href="./index.html#projects">Sample Projects</a>
           </li>
 
           <li class="header__sm-menu-link">
@@ -80,7 +80,7 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a href="./index.html#projects" class="btn btn--bg">Sample Works</a>
+        <a href="./index.html#projects" class="btn btn--bg">Sample Projects</a>
       </div>
     </div>
   </section>
@@ -88,34 +88,27 @@
     <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main">About Me</span>
-        <span class="heading-sec__sub">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-          tempora explicabo quae quod deserunt eius sapiente
-        </span>
       </h2>
       <div class="about__content">
         <div class="about__content-main">
           <h3 class="about__content-title">Get to know me!</h3>
           <div class="about__content-details">
             <p class="about__content-details-para">
-              Hey! It's
+              Hi! It's
               <strong>Full Name</strong>
-              and I'm a <strong> Frontend Web Developer </strong> located in
-              Los Angeles. I've done
-              <strong> remote </strong>
-              projects for agencies, consulted for startups, and collaborated
-              with talented people to create
-              <strong>digital products </strong>
+              and I'm a <strong> Frontend Developer </strong> located in
+              both Manila and Laguna. I've done
+              projects to create
+              <strong>products </strong>
               for both business and consumer use.
             </p>
             <p class="about__content-details-para">
-              I'm a bit of a digital product junky. Over the years, I've used
-              hundreds of web and mobile apps in different industries and
-              verticals. Feel free to
+              Over the years, I've used frameworks like
+              VueJS with Nuxt and Wordpress. Feel free to
               <strong>contact</strong> me here.
             </p>
           </div>
-          <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr">Contact</a>
+          <a href="./index.html#contact" class="btn btn--med btn--theme dynamicBgClr">Contact</a>
         </div>
         <div class="about__content-skills">
           <h3 class="about__content-title">My Skills</h3>
@@ -133,42 +126,34 @@
   <section id="projects" class="projects sec-pad">
     <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-bg">
-        <span class="heading-sec__main">Sample Works</span>
-        <span class="heading-sec__sub">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-          tempora explicabo quae quod deserunt eius sapiente
-        </span>
+        <span class="heading-sec__main">Sample Projects</span>
       </h2>
 
       <div class="projects__content">
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
-              loading="lazy" />
+            <img src="./assets/png/tictactoeB.png" alt="Software Screenshot" class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Work 1</h3>
+            <h3 class="projects__row-content-title">Meow Tictactoe Game</h3>
             <p class="projects__row-content-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-              facilis tempora, explicabo quae quod deserunt eius sapiente
-              praesentium.
+              It's a simple tic-tac-toe game played by two players. In settings, you can modify or customize players and
+              tictactoe signs, shapes, and colors.
             </p>
             <a href="./work-1.html" class="btn btn--med btn--theme dynamicBgClr">View</a>
           </div>
         </div>
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+            <img src="./assets/png/vue-pokemon-home.png" alt="Software Screenshot" class="projects__row-img"
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Work 2</h3>
+            <h3 class="projects__row-content-title">Pokemon Website</h3>
             <p class="projects__row-content-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-              facilis tempora, explicabo quae quod deserunt eius sapiente
-              praesentium.
-            </p>
-            <a href="./work-2.html" class="btn btn--med btn--theme dynamicBgClr">View</a>
+              This website is dedicated to all things Pokémon, discovering various Pokémon species and their unique
+              attributes.
+              <a href="./work-2.html" class="btn btn--med btn--theme dynamicBgClr">View</a>
           </div>
         </div>
       </div>
@@ -178,10 +163,6 @@
     <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main heading-sec__main--lt">Contact</span>
-        <span class="heading-sec__sub heading-sec__sub--lt">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-          tempora explicabo quae quod deserunt eius sapiente
-        </span>
       </h2>
       <div class="contact__form-container">
       </div>
