--- a/work-1.html
+++ b/work-1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Work 1</title>
+  <title>Meow Tictactoe Game</title>
   <meta name="description" content="View Sample Work" />
 
   <link rel="stylesheet" href="css/style.css" />
@@ -35,7 +35,7 @@
           </li>
           <li class="header__link-wrapper">
             <a href="./index.html#projects" class="header__link">
-              Sample Works
+              Sample Projects
             </a>
           </li>
           <li class="header__link-wrapper">
@@ -61,7 +61,7 @@
           </li>
 
           <li class="header__sm-menu-link">
-            <a href="./index.html#projects"> Sample Works </a>
+            <a href="./index.html#projects"> Sample Projects </a>
           </li>
 
           <li class="header__sm-menu-link">
@@ -73,70 +73,89 @@
   </header>
   <section class="project-cs-hero">
     <div class="project-cs-hero__content">
-      <h1 class="heading-primary">Work 1</h1>
-      <div class="project-cs-hero__info">
-        <p class="text-primary">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-          in numquam incidunt earum quaerat cum fuga, atque similique natus
-          nobis sit.
-        </p>
+      <h3 class="heading-primary">Meow Tictactoe Game</h3>
+      <div class="project-details__showcase-img-cont">
+        <video width="100%" height="340" controls>
+          <source src="./assets/meow.webm" type="video/webm">
+        </video>
       </div>
       <div class="project-cs-hero__cta">
-        <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+        <a href="https://meow-tictactoe-game.netlify.app/" class="btn btn--bg" target="_blank">Live Link</a>
       </div>
     </div>
   </section>
   <section class="project-details">
     <div class="main-container">
       <div class="project-details__content">
-        <div class="project-details__showcase-img-cont">
-          <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Project Image"
-            class="project-details__showcase-img" />
-        </div>
         <div class="project-details__content-main">
-          <div class="project-details__desc">
-            <h3 class="project-details__content-title">Project Overview</h3>
-            <p class="project-details__desc-para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              alias tenetur minus quaerat aliquid, aut provident blanditiis,
-              deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-              mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Neque alias tenetur minus quaerat
-              aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-              eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-              ullam rem?
-            </p>
-            <p class="project-details__desc-para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              alias tenetur minus quaerat aliquid, aut provident blanditiis,
-              deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-              mollitia laborum corrupti ullam rem?
-            </p>
-          </div>
-          <div class="project-details__tools-used">
-            <h3 class="project-details__content-title">Tools Used</h3>
-            <div class="skills">
-              <div class="skills__skill">HTML</div>
-              <div class="skills__skill">CSS</div>
-              <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
-            </div>
-          </div>
-          <div class="project-details__links">
-            <h3 class="project-details__content-title">See Live</h3>
-            <a href="#" class="btn btn--med btn--theme project-details__links-btn" target="_blank">Live Link</a>
-            <a href="#" class="btn btn--med btn--theme-inv project-details__links-btn" target="_blank">Code Link</a>
+          <h3 class="project-details__content-title">Overview</h3>
+          <span class="heading-sec__sub">
+            It's a simple tic-tac-toe game played by two players. In settings, you can modify or customize players and
+            tictactoe signs, shapes, and colors.
+          </span>
+        </div>
+        <div class="project-details__desc">
+          <p class="project-details__desc-para">
+            Loading
+            <img src="./assets/png/tictactoeA.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+          <p class="project-details__desc-para">
+            Home
+            <img src="./assets/png/tictactoeB.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+        </div>
+        <div class="project-details__desc">
+          <p class="project-details__desc-para">
+            Settings
+            <img src="./assets/png/tictactoe-settings.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+          <p class="project-details__desc-para">
+            Tictactoe Shapes
+            <img src="./assets/png/tictactoe-shapes.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+        </div>
+        <div class="project-details__desc">
+          <p class="project-details__desc-para">
+            Tictactoe Players
+            <img src="./assets/png/tictactoe-players.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+          <p class="project-details__desc-para">
+            Tictactoe Game Types
+            <img src="./assets/png/tictactoe-game-type.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+        </div>
+        <div class="project-details__desc">
+          <p class="project-details__desc-para">
+            Tictactoe Choose Players
+            <img src="./assets/png/tictactoe-choose-player.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+          <p class="project-details__desc-para">
+            Tictactoe Play Game
+            <img src="./assets/png/tictactoe-game.png" alt="Tictactoe" class="project-details__showcase-img" />
+          </p>
+        </div>
+        <div class="project-details__tools-used">
+          <h3 class="project-details__content-title">Tools Used</h3>
+          <div class="skills">
+            <a href="https://tailwindcss.com/docs/installation" class="skills__skill" target="_blank">Tailwind CSS</a>
+            <a href="https://vuejs.org/guide/introduction.html" class="skills__skill" target="_blank">Vue3
+              (Typescript)</a>
+            <a href="https://element-plus.org/en-US/guide/quickstart.html" class="skills__skill" target="_blank">Element
+              + UI</a>
+            <a href="https://firebase.google.com/docs/database" class="skills__skill" target="_blank">Firebase (Realtime
+              Database)
           </div>
         </div>
       </div>
+      <div class="project-details__links">
+        <h3 class="project-details__content-title">See Live</h3>
+        <a href="https://meow-tictactoe-game.netlify.app/" class="btn btn--med btn--theme project-details__links-btn"
+          target="_blank">Live Link</a>
+        <a href="https://github.com/kath-06/sample-game" class="btn btn--med btn--theme-inv project-details__links-btn"
+          target="_blank">Code Link</a>
+      </div>
+    </div>
+    </div>
     </div>
   </section>
   <footer class="main-footer">
