fix tools used link

--- a/work-1.html
+++ b/work-1.html
@@ -143,7 +143,7 @@
             <a href="https://element-plus.org/en-US/guide/quickstart.html" class="skills__skill" target="_blank">Element
               + UI</a>
             <a href="https://firebase.google.com/docs/database" class="skills__skill" target="_blank">Firebase (Realtime
-              Database)
+              Database)</a>
           </div>
         </div>
       </div>
