fix project pages

--- a/work-1.html
+++ b/work-1.html
@@ -146,16 +146,14 @@
               Database)</a>
           </div>
         </div>
+        <div class="project-details__links">
+          <h3 class="project-details__content-title">See Live</h3>
+          <a href="https://meow-tictactoe-game.netlify.app/" class="btn btn--med btn--theme project-details__links-btn"
+            target="_blank">Live Link</a>
+          <a href="https://github.com/kath-06/sample-game"
+            class="btn btn--med btn--theme-inv project-details__links-btn" target="_blank">Code Link</a>
+        </div>
       </div>
-      <div class="project-details__links">
-        <h3 class="project-details__content-title">See Live</h3>
-        <a href="https://meow-tictactoe-game.netlify.app/" class="btn btn--med btn--theme project-details__links-btn"
-          target="_blank">Live Link</a>
-        <a href="https://github.com/kath-06/sample-game" class="btn btn--med btn--theme-inv project-details__links-btn"
-          target="_blank">Code Link</a>
-      </div>
-    </div>
-    </div>
     </div>
   </section>
   <footer class="main-footer">
