change hover colors

--- a/work-2.html
+++ b/work-2.html
@@ -131,7 +131,7 @@
           <a href="https://vue-nuxt-pokemon-site.netlify.app" class="btn btn--med btn--theme project-details__links-btn"
             target="_blank">Live Link</a>
           <a href="https://github.com/kath-06/vue-nuxt-pokemon"
-            class="btn btn--med btn--theme-inv project-details__links-btn" target="_blank">Code Link</a>
+            class="btn btn--med btn--theme project-details__links-btn" target="_blank">Code Link</a>
         </div>
       </div>
     </div>
