--- a/work-1.html
+++ b/work-1.html
@@ -150,8 +150,8 @@
           <h3 class="project-details__content-title">See Live</h3>
           <a href="https://meow-tictactoe-game.netlify.app/" class="btn btn--med btn--theme project-details__links-btn"
             target="_blank">Live Link</a>
-          <a href="https://github.com/kath-06/sample-game"
-            class="btn btn--med btn--theme-inv project-details__links-btn" target="_blank">Code Link</a>
+          <a href="https://github.com/kath-06/sample-game" class="btn btn--med btn--theme project-details__links-btn"
+            target="_blank">Code Link</a>
         </div>
       </div>
     </div>
