--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header__logo-img-cont">
           <img src="./assets/png/avatar_female_woman_icon.png" alt="Logo Image" class="header__logo-img" />
         </div>
-        <span class="header__logo-sub">Full Name</span>
+        <span class="header__logo-sub">Kath Portfolio</span>
       </div>
       <div class="header__main">
         <ul class="header__links">
@@ -69,20 +69,8 @@
       </div>
     </div>
   </header>
-  <section class="home-hero">
-    <div class="home-hero__content">
-      <h1 class="heading-primary">Full Name</h1>
-      <div class="home-hero__info">
-        <p class="text-primary">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-          tempora explicabo quae quod deserunt eius sapiente solutions for
-          complex problems
-        </p>
-      </div>
-      <div class="home-hero__cta">
-        <a href="./index.html#projects" class="btn btn--bg">Sample Projects</a>
-      </div>
-    </div>
+  <section class="home-hero-img">
+    <img src="./assets/kath-portfolio-header.gif" alt="Software Screenshot" class="headers__row-img" loading="lazy" />
   </section>
   <section id="about" class="about sec-pad">
     <div class="main-container">
@@ -91,20 +79,18 @@
       </h2>
       <div class="about__content">
         <div class="about__content-main">
-          <h3 class="about__content-title">Get to know me!</h3>
           <div class="about__content-details">
             <p class="about__content-details-para">
               Hi! It's
-              <strong>Full Name</strong>
+              <strong>Kathleen Balbas</strong>
               and I'm a <strong> Frontend Developer </strong> located in
               both Manila and Laguna. I've done
-              projects to create
-              <strong>products </strong>
-              for both business and consumer use.
+              projects to create <strong>user-friendly websites and applications</strong> for both business and consumer
+              use.
             </p>
             <p class="about__content-details-para">
-              Over the years, I've used frameworks like
-              VueJS with Nuxt and Wordpress. Feel free to
+              Over the years, I've honed my skills in HTML, CSS, and JavaScript, delving deeper into frameworks like
+              Vue, and Wordpress to create responsive, dynamic, and intuitive web applications. Feel free to
               <strong>contact</strong> me here.
             </p>
           </div>
@@ -166,6 +152,17 @@
         <span class="heading-sec__main heading-sec__main--lt">Contact</span>
       </h2>
       <div class="contact__form-container">
+        <div class="projects__row-content">
+          <p class="projects__row-content-desc">
+            <b>Email: </b> kathbalbas@gmail.com
+          </p>
+          <p class="projects__row-content-desc">
+            <b> Mobile Number: </b> 09051254891
+          </p>
+          <p class="projects__row-content-desc">
+            <b>Whatsapp and Viber: </b> 09051254891
+          </p>
+        </div>
       </div>
     </div>
   </section>
@@ -173,10 +170,9 @@
     <div class="main-container">
       <div class="main-footer__upper">
         <div class="main-footer__row main-footer__row-2">
-          <h4 class="heading heading-sm text-lt">Full Name</h4>
+          <h4 class="heading heading-sm text-lt">Kath Portfolio</h4>
           <p class="main-footer__short-desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-            tempora explicabo quae quod deserunt
+            Thank you for stopping by!
           </p>
         </div>
       </div>
