change color palette

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
       </h2>
       <div class="contact__form-container">
         <div class="projects__row-content">
-          <p class="projects__row-content-desc">
+          <p class="contact__form-label">
             <b>Email: </b> kathbalbas@gmail.com
           </p>
-          <p class="projects__row-content-desc">
+          <p class="contact__form-label">
             <b> Mobile Number: </b> 09051254891
           </p>
-          <p class="projects__row-content-desc">
+          <p class="contact__form-label">
             <b>Whatsapp and Viber: </b> 09051254891
           </p>
         </div>
