--- a/work-2.html
+++ b/work-2.html
@@ -23,7 +23,7 @@
         <div class="header__logo-img-cont">
           <img src="./assets/png/avatar_female_woman_icon.png" alt="Logo Image" class="header__logo-img" />
         </div>
-        <span class="header__logo-sub">Full Name</span>
+        <span class="header__logo-sub">Kath Portfolio</span>
       </div>
       <div class="header__main">
         <ul class="header__links">
