comment logo image

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <header class="header">
     <div class="header__content">
       <div class="header__logo-container">
-        <div class="header__logo-img-cont">
+        <!-- <div class="header__logo-img-cont">
           <img src="./assets/png/avatar_female_woman_icon.png" alt="Logo Image" class="header__logo-img" />
-        </div>
+        </div> -->
         <span class="header__logo-sub">Kath Portfolio</span>
       </div>
       <div class="header__main">
@@ -114,6 +114,7 @@
       <h2 class="heading heading-sec heading-sec__mb-bg">
         <span class="heading-sec__main">Sample Projects</span>
       </h2>
+
 
       <div class="projects__content">
         <div class="projects__row">
